--- a/Twitter.html
+++ b/Twitter.html
@@ -9,7 +9,7 @@
 <img src="banner.jpg" width="100%" height="50px">
 <nav>
 <a href="index.html">Home</a>
-<a href="facebook.html">Facebook</a>
+<a href="facebook.html">Facebook/Whatsapp</a>
 <a href="twitter.html">Twitter</a>
 <a href="snapchat.html">Snapchat</a>
 <a href="instagram.html">Instagram</a>
