--- a/facebook.html
+++ b/facebook.html
@@ -9,23 +9,31 @@
 <img src="banner.jpg" width="100%" height="50px">
 <nav>
 <a href="index.html">Home</a>
-<a href="facebook.html">Facebook</a>
+<a href="facebook.html">Facebook/Whatsapp</a>
 <a href="twitter.html">Twitter</a>
 <a href="snapchat.html">Snapchat</a>
 <a href="instagram.html">Instagram</a>
 </nav>
-<h1>Facebook Hacks</h1>
+<h1>Facebook / Whatsapp Hacks</h1>
 <img src="fb.png" width="25%">
+<img src="wa.png" width="25%">
 <h3> Background</h3>
-<p>My first paragraph.</p>
+<p>Facebook and Whatsapp are owned by the same company and both get hacked frequently. 
+Facebook was created back in Feburary of 2004 and Whatsapp was created back in Feburary of 2009.
+Both Facebook and Whatsapp are popular social media websites that people use to communicate with their friends and family members. 
+They also use it to share special memories, people have a lot of trust in these platforms. These platforms are not secure and at this point, hackers log in for fun or just to see if they have the skills to do it. 
+</p>
 <div id="row">
 <div id="News">
-<h3> News 1</h3>
-<p>My first paragraph.</p>
+<h3> Facebook</h3>
+<p> In early 2021, a hacker managed to possess and sell over 1.5 billion of users data. The data contains users: name, email, phone number, location, gender, and user ID. The data appears to be authentic. The personal data obtained through web scraping. The data was sold for as cheap as $10. The sold data was claimed to be new from 2021.
+ </p>
 </div>
 <div id="News">
-<h3> News 2</h3>
-<p>My first paragraph.</p>
+<h3> Whatsapp</h3>
+<p> A new vulnerability will allow an attacker to easily deactivate WhatsApp on your phone, with just your phone number. The worrying thing is that two-factor authentication will not be able to prevent this from happening. 
+The Facebook owned WhatsApp has more than 2 billion users globally, making it the most popular and most used instant messaging app in the world. The way this attack works is that it requires some amount of error by the user themselves but at the next step that should be designed to protect this, the two-factor authentication also doesn’t do anything to prevent the attack. 
+</p>
 
 </div>
 </div>
