--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Social Media Hacks</title>
+	<h2> Welcome to our page :) </h2>
+	<meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+	<img src="banner.jpg" width="100%" height="50px">
+		
+		
+		
+		<nav>
+<a href="index.html">Home</a>
+<a href="facebook.html">Facebook/Whatsapp</a>
+<a href="twitter.html">Twitter</a>
+<a href="snapchat.html">Snapchat</a>
+<a href="instagram.html">Instagram</a>
+</nav>
+		<header>
+			<h1>
+			Social Media Hacks By KDJC
+			</h1>
+		</header>
+		<main>
+		<div id="intro">
+		<h3>Social Media has been around since the late 1990’s and since it has existed there has been many different attacks on all different types of platforms. In this presentation, we will be focusing on facebook/whatsapp, twitter, snapchat and instagram. 
+</h3>
+</div>
+<img src="snap.png" width="25%">
+<div id="row">
+<div id="News">
+<h3> Pros</h3>
+<p> Finding holes in software, Improve products and Uncover or expose criminal activity
+</p>
+<h3> What does Hacking do?</h3>
+<p>When you get hacked, hackers break into computer systems in order to steal, change or destroy information, often by installing dangerous malware without your knowledge or consent. 
+Their detailed technical knowledge help them access the information you don't want them to have.</p>
+<h3> What are the Implications of Hacking?</h3>
+<p>The legal risks of ethical hacking include lawsuits due to disclosure of personal or confidential information. Such disclosure can lead to a legal battle involving the organization and the ethical hacker.</p>
+</div>
+<div id="News">
+<h3> Cons</h3>
+<p>Causes glitches and viruses, Can access private documents and information, Can lead to identity theft, Can send spam emails, download programs and slow computer
+ </p>
+ <h3> Where did Hacking originate/Where is it being used?</h3>
+<p> Hacking was originated back in 1969 when a group of tech and model train enthusiasts at M.I.T. challenged themselves to hack into the system of a railroad company to improve its efficiency.
+Hacking is only used for necessary things ie identifing a threat or to secure data and privacy from an ill-intended attacker.
+</p>
+<h3> Annotated Sources </h3>
+<p>-, T., By, -, Tim, here, P. & -, A. B. A. (2018, February 2). Tim. AnswersBy Blogs. Retrieved October 18, 2021, from https://answersby.com/blogs/updates/dolphin-attack-the-modern-era-phone-phreaking/. 
+Cipriani, J. (2021, September 9). T-Mobile Data Breach 2021: Here's what it means for securing your data. CNET. Retrieved October 18, 2021, from https://www.cnet.com/tech/services-and-software/t-mobile-data-breach-2021-heres-what-it-means-for-securing-your-data/. 
+FitzGerald, D., & McMillan, R. (2021, August 27). WSJ News Exclusive | T-Mobile Hacker who stole data on 50 million customers: 'their security is awful'. The Wall Street Journal. Retrieved October 18, 2021, from https://www.wsj.com/articles/t-mobile-hacker-who-stole-data-on-50-million-customers-their-security-is-awful-11629985105. 
+Hacking: Pros and cons - ICS 101 computer abuse. Google Sites. (n.d.). Retrieved October 18, 2021, from https://sites.google.com/site/ics101computerabuse/hacking/hacking-pros-and-cons. 
+History of hacking. (n.d.). Retrieved October 18, 2021, from http://plaza.ufl.edu/ysmgator/projects/project2/history.html. 
+Jaccarino, M. (2011, October 29). Facebook hack attacks strike 600,000 times per day, security firm reports  . nydailynews.com. Retrieved October 18, 2021, from https://www.nydailynews.com/news/national/facebook-hack-attacks-strike-600k-times-day-article-1.968681. 
+Judah, N. (2019, March 4). What is hacking? common objectives, types, and how to guard against it. Hacker Noon. Retrieved October 18, 2021, from https://hackernoon.com/what-is-hacking-common-objectives-types-and-how-to-guard-against-it-ab99897ff00b. 
+Potkin, F. (2020, July 16). Factbox-major hacks of social media platforms. Reuters. Retrieved October 18, 2021, from https://www.reuters.com/article/twitter-cyber/factbox-major-hacks-of-social-media-platforms-idUSL2N2EN073. 
+Published: May 8, 2013L. U. J. 22. (2021, January 22). Complete history of social media: Then and now. Small Business Trends. Retrieved October 18, 2021, from https://smallbiztrends.com/2013/05/the-complete-history-of-social-media-infographic.html. 
+Social Media: Make it part of your marketing toolbox - by Chris Carroll. Golden. (2021, May 17). Retrieved October 18, 2021, from https://www.goldentech.com/path/social-media-make-it-part-of-your-marketing-toolbox-by-chris-carroll/. 
+Spyd3r April 8, Spyd3r, & 8, A. (2019, March 11). The history of hacking. Help Net Security. Retrieved October 18, 2021, from https://www.helpnetsecurity.com/2002/04/08/the-history-of-hacking/. 
+</p>
+ 
+ 
+ 
+		</main>
+		
+		<footer>
+		</footer>
+	
+</body>
+</html>
 
